--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <h1 class="blink_me">Control panel</h1>
+  <h2 class="blink_me">Control panel</h2>
 
   <div class="app">
     <div id="mainContainer">
@@ -19,10 +19,19 @@
         <h2>Lights</h2>
       </div>
       <div id="row2">
-          <h2>Sockets</h2>
+        <h2>Sockets</h2>
       </div>
       <div id="row3">
-          <h2>Doors</h2>
+        <h2>Doors</h2>
+      </div>
+    </div>
+  
+    <h2 class="blink_me">Sensor data</h2>
+
+    <div class="sub-container">
+      <div class="sensor-data">
+        <div class="child-div temp"></div>
+        <div class="child-div hum"></div>
       </div>
     </div>
   </div>
