--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Domotica</title>
+  <link rel="stylesheet" href="css/fade.css">
   <link rel="stylesheet" href="css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900i&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
 
 <body>
 
-  <h2 class="blink_me">Control panel</h2>
+  <!-- <h2 class="blink_me">Control panel</h2> -->
 
   <div class="app">
     <div id="mainContainer">
@@ -26,7 +28,7 @@
       </div>
     </div>
   
-    <h2 class="blink_me">Sensor data</h2>
+    <h2>Sensor data</h2>
 
     <div class="sub-container">
       <div class="sensor-data">
