--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,6 @@
   <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
 
 <body>
-
-  <!-- <h2 class="blink_me">Control panel</h2> -->
-
   <div class="app">
     <div id="mainContainer">
       <div id="row1">
@@ -27,10 +24,8 @@
         <h2>Doors</h2>
       </div>
     </div>
-  
-    <h2>Sensor data</h2>
-
-    <div class="sub-container">
+    <h2 class="fade-in one">Sensor data</h2>
+    <div class="sub-container fade-in three">
       <div class="sensor-data">
         <div class="child-div temp"></div>
         <div class="child-div hum"></div>
